<resources>
    <string name="app_name">KaraokeApp</string>
    <string name="title">SongLore</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotpassword">FORGOT PASSWORD?</string>
    <string name="repeatpsswd">Repeat password</string>
    <string name="mail">Email</string>
    <string name="name">Name</string>
    <string name="surnames">Surnames</string>
    <string name="birthdate">Birth date</string>
    <string name="gender">Gender</string>
    <string name="acceptterms">Accept Terms and conditions</string>
    <string name="required_field">Required field</string>
    <string name="tuto">In order to start singing a song, tap one.</string>
    <string name="logout">Log out</string>
    <string name="songTitle">Song title</string>
    <string name="artist">Artist Name</string>
    <string name="popular">Popular Songs</string>
    <string name="sing">Sing now</string>
    <string name="lyrics">Lyrics Test</string>
    <string name="recent">Recently Sang Songs</string>
    <string name="letraCancionEjemplo">Llego soliá, salió sin las amigas
Rebelada en el alcohol buscando una salida
De esa relación de mentira
Mami, ya vi cómo me miras
Te lo repito por si se te olvida
Envíale un mensaje que diga
Que no te deje sola
Porque puede perderte
Si algún día vuelve a verte
De mi parte le dices que no te deje sola
Porque puede perderte
Si algún día vuelve a verte
Eh, eh, eh, eh
Ey, oh, ey
Oh, oh, oh, oh
Ey, oh, oh
Oh, oh, oh, oh
Ey, oh, ey
Oh, oh, oh, oh
Ey, oh, oh
Oh, oh, oh, oh
Hoy quiere bailar la noche entera, ey
Está casi soltera
No le presenta a nadie eso le da flojera
Total al final de la noche ella tiene lo que quiera
La luna ya le indicó
Subió algo pal story, alguien se picó
Sonó su canción y se la dedicó
Dice que quiere hacerlo conmigo rico, eh
Que los cristales se empañen
La nena está grande
Como pa que alguien la regañe
La noche no le dañe, eh
Que la Kardashian ya no está pa Kanye
Han sido muchas decepciones, eh
Mentiras de todos estos cabrones, eh
Una vez más le fallaron
Daría una oportunidad pero se le acabaron
Llego soliá, salió sin las amigas
Rebelada en el alcohol buscando una salida
De esa relación de mentira
Mami, ya vi cómo me miras
Te lo repito por si se te olvida
Envíale un mensaje que diga
Que no te deje sola
Porque puede perderte
Si algún día vuelve a verte
De mi parte le dices que no te deje sola
Porque puede perderte
Si algún día vuelve a verte</string>
    <string name="back">Go back</string>
    <string name="menu">Menu</string>

</resources>