<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.IntroFragment"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="@font/montserratblack"
        android:id="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/imageStart"
        android:textColor="@color/colorSecundarioOscurecido"
        android:textSize="30dp"/>

    <ImageView
        android:id="@+id/imageStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageStart"
        android:text="@string/login"
        android:id="@+id/loginButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="20sp"
        android:text="@string/register"
        android:id="@+id/registerButton"/>

</RelativeLayout>