<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratblack"
            android:layout_marginLeft="10sp"
            android:text="@string/register"
            android:textStyle="bold"
            android:layout_marginTop="50sp"
            android:textColor="#9F81FF"
            android:textSize="30sp"
            android:id="@+id/text"
            android:layout_marginStart="10sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/username"
            android:textColorHint="#FFF"
            android:layout_marginTop="30sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#637A65C6"
            app:errorEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/password"
            android:textColorHint="#FFF"
            android:layout_marginTop="10sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#637A65C6"
            app:passwordToggleEnabled="true"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/repeatpsswd"
            android:textColorHint="#FFF"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#637A65C6"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/mail"
            android:textColorHint="#FFF"
            android:layout_marginTop="10sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#637A65C6"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/name"
            android:textColorHint="#FFF"
            android:layout_marginTop="10sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#637A65C6"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/surnames"
            android:textColorHint="#FFF"
            android:layout_marginTop="10sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#637A65C6"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/birthdate"
            android:textColorHint="#FFF"
            android:layout_marginTop="10sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#637A65C6"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFF"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="#637A65C6"
            android:hint="@string/gender">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:inputType="text"
                android:textColor="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceptterms"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10sp"
            android:id="@+id/acceptBox"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="20sp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:id="@+id/registerButton"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:id="@+id/loginButton"
            android:layout_marginTop="10sp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

    </LinearLayout>


</ScrollView>