<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UserScreenFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002">

        <TextView
            android:id="@+id/tuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/tuto"
            android:textColor="#FF9F81FF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/popularSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tuto"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="20dp"
            android:text="@string/popular"
            android:textColor="#FF9F81FF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylcerViewPop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:id="@+id/recentSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/recent"
            android:textColor="#FF9F81FF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylcerViewRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>